--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,9 +19,9 @@
 	</application>
 
 
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+	<!-- uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission-->
 <uses-sdk android:maxSdkVersion="11" android:targetSdkVersion="9" android:minSdkVersion="4"></uses-sdk>
 </manifest> 
