--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="/mvplan/target/mvplan-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="/mvplan/target/mvplan-0.0.1-SNAPSHOT.jar" sourcepath="/mvplan/src/main/java"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/mvplan"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
