--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.ediver.ascuba" android:versionCode="200" android:versionName="0.2.1">
+	package="org.ediver.ascuba" android:versionCode="300" android:versionName="0.3.0">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:description="@string/app_description" android:name="AScuba">
 		<activity android:name=".Welcome" android:label="@string/app_name">
@@ -16,6 +16,7 @@
 		<activity android:name=".SegmentList"></activity>
 		<activity android:name=".ProfileView"></activity>
 		<activity android:name=".Dives"></activity>
+		<activity android:name=".gui.MVPlanPreferences"></activity>
 	</application>
 
 
