- working on better preferences handling - store segments in to SharedPreferences using json format - store gases in to SharedPreferences using json format
- added changes from Fabrice Cetre (many thanks):
Ascent and descent rate
Altitude
Model
Detail view

--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/mvplan_core"/>
 	<classpathentry kind="lib" path="/mvplan_core/target/mvplan_core-1.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gson-2.2.2.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
