--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	<uses-sdk android:maxSdkVersion="15" android:targetSdkVersion="10" android:minSdkVersion="4"></uses-sdk>
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 		android:description="@string/app_description" android:name="AScuba">
-		<activity android:name=".Welcome" android:label="@string/app_name">
+		<activity android:name=".Welcome" android:label="@string/app_name" android:noHistory="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
