--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.ediver.ascuba" android:versionCode="401" android:versionName="0.4.1">
-	<uses-sdk android:maxSdkVersion="15" android:targetSdkVersion="10" android:minSdkVersion="4"></uses-sdk>
+	<uses-sdk android:maxSdkVersion="17" android:targetSdkVersion="17" android:minSdkVersion="4"></uses-sdk>
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:description="@string/app_description" android:name="AScuba">
+		android:description="@string/app_description" android:name="AScuba" android:allowBackup="true" >
 		<activity android:name=".Welcome" android:label="@string/app_name" android:noHistory="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
