--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.ediver.ascuba" android:versionCode="401" android:versionName="0.4.1">
+	package="org.ediver.ascuba" android:versionCode="401" android:versionName="0.4.1" >
 	<uses-sdk android:maxSdkVersion="17" android:targetSdkVersion="17" android:minSdkVersion="4"></uses-sdk>
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:description="@string/app_description" android:name="AScuba" android:allowBackup="true" >
+		android:description="@string/app_description" android:name="AScuba" android:allowBackup="true" android:hardwareAccelerated="true" android:theme="@android:style/Theme.NoTitleBar">
 		<activity android:name=".Welcome" android:label="@string/app_name" android:noHistory="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -11,6 +11,7 @@
 			</intent-filter>
 		</activity>
 		<activity android:name=".NewDive"></activity>
+		<activity android:name=".About"></activity>
 		<activity android:name=".EditDive"></activity>
 		<activity android:name=".DivePlanner"></activity>
 		<activity android:name=".GasList"></activity>
